--- a/extension.properties
+++ b/extension.properties
@@ -9,5 +9,5 @@ website.dest.dir=/opt/devel/0dafiprj/SrcXML-VBS/sourceforge.site/dafizilla/visua
 # Use to sign update.rdf
 spock.executable=/opt/devel/mozilla/spock/sign-update
 src.update.rdf.path=tmp/update/update.rdf
-mccoy.path=mccoy.path=/opt/devel/0dafiprj/srcmoz/common/mccoy.sign
+mccoy.path=/opt/devel/0dafiprj/srcmoz/common/mccoy.sign
 dest.update.rdf.path=/opt/devel/0dafiprj/SrcXML-VBS/sourceforge.site/dafizilla/visualdiffer/update.rdf
